# WebWisdom

./: LICENSE  README.md  main.py  requirements.txt
backend/WebWisdom/: pyproject.toml  testreport.html  tt.html  webwisdom.sqlite  zap.yaml
backend/WebWisdom-poetry/: main.py  pyproject.toml
backend/WebWisdom-poetry/app/: api.py
backend/WebWisdom-poetry/tests/: test.py
backend/WebWisdom-poetry/webwisdom_poetry/: isHTTPS.py
backend/WebWisdom/tests/: test_app.py
backend/WebWisdom/webwisdom/: main.py  test_main.py  webwisdom.sqlite
backend/WebWisdom/webwisdom/app/: api.py
backend/WebWisdom/webwisdom/app/logic/: base_test.py  check_site_state.py  data_parse.py  framework_check.py  main.py  nmap.py  score_calculator.py
backend/WebWisdom/webwisdom/app/logic/penetration_tests/: ptt.py  zap.py
backend/WebWisdom/webwisdom/config/: config.py
backend/WebWisdom/webwisdom/database/: crud.py  database.py  models.py  schemas.py
backend/WebWisdom/webwisdom/routers/: auth.py
frontend/: README.md  index.html  output.css  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: output.css
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: DomainInput.jsx  Footer.jsx  Hero.jsx  HtmlContent.jsx  Layout.jsx  Loading.jsx  Navbar.jsx  NotFound.jsx  ResultBox.jsx  ResultBoxCookies.jsx  ResultBoxFiles.jsx  ResultBoxHeaders.jsx  ResultBoxServerVulnerabilities.jsx  ResultBoxTechnologies.jsx  ResultBoxWithIP.jsx  ResultZAP.jsx  (+3 more)
helperFunctions/: runLinuxCommand.py
testClasses/: isHTTPS.py  isOnline.py
(+11 files in other folders)
