[tool.poetry]
name = "webwisdom-poetry"
version = "0.1.0"
description = ""
authors = ["Khaled Qasim Kraken <khaled.qasim183@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
